Fixed paragraph having bottom padding making a single line of bio look offcenter

--- a/assets/stylesheets/profile.css
+++ b/assets/stylesheets/profile.css
@@ -1,4 +1,6 @@
-
+p {
+    margin-bottom: 0px;
+}
 
 #title {
     /* padding-bottom: 15px;     */
